[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/combat/ActionMenu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="menu_style"]
bg_color = Color(0.1, 0.08, 0.14, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.75, 0.6, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ActionMenu" type="Control"]
layout_mode = 3
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.82
anchor_right = 0.85
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("menu_style")

[node name="MainButtons" type="HBoxContainer" parent="MenuPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 8

[node name="AttackBtn" type="Button" parent="MenuPanel/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Attack"

[node name="AbilityBtn" type="Button" parent="MenuPanel/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Ability"

[node name="ItemBtn" type="Button" parent="MenuPanel/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Item"

[node name="DefendBtn" type="Button" parent="MenuPanel/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Defend"

[node name="SubPanel" type="Panel" parent="MenuPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = -0.1
offset_top = -250.0
theme_override_styles/panel = SubResource("menu_style")

[node name="Margin" type="MarginContainer" parent="MenuPanel/SubPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="MenuPanel/SubPanel/Margin"]
layout_mode = 2

[node name="SubList" type="VBoxContainer" parent="MenuPanel/SubPanel/Margin/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
